# os-win

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  contributing.rst  index.rst  installation.rst  sample_config.rst  usage.rst
etc/: os-win-config-generator.conf
os_win/: __init__.py  _i18n.py  _utils.py  conf.py  constants.py  exceptions.py  utilsfactory.py  version.py
os_win/_hacking/: checks.py
os_win/tests/: test_base.py  test_utils.py  test_utilsfactory.py
os_win/tests/functional/: test_base.py  test_mutex.py  test_pathutils.py  test_vhdutils.py
os_win/tests/unit/: test_base.py  test_hacking.py  test_processutils.py  test_utils.py  test_utilsfactory.py
os_win/tests/utils/: test_aclutils.py  test_baseutils.py  test_basevolumeutils.py  test_hostutils.py  test_hostutils10.py  test_hostutilsv2.py  test_ioutils.py  test_jobutils.py  test_livemigrationutils.py  test_networkutils.py  test_networkutilsv2.py  test_pathutils.py  test_rdpconsoleutils.py  test_rdpconsoleutilsv2.py  test_vhdutils.py  test_vhdutilsv2.py  test_vmutils.py  test_vmutilsv2.py  test_volumeutils.py  test_volumeutilsv2.py  test_win32utils.py  test_wqlutils.py
os_win/utils/: _acl_utils.py  _wqlutils.py  baseutils.py  basevolumeutils.py  constants.py  hostutils.py  hostutils10.py  hostutilsv2.py  jobutils.py  livemigrationutils.py  networkutilsv2.py  pathutils.py  processutils.py  rdpconsoleutilsv2.py  vhdutilsv2.py  vmutils.py  vmutilsv2.py  volumeutils.py  volumeutilsv2.py  win32utils.py
os_win/utils/compute/: _clusapi_utils.py  clusterutils.py  livemigrationutils.py  migrationutils.py  rdpconsoleutils.py  rdpconsoleutilsv2.py  vmutils.py  vmutils10.py  vmutilsv2.py
os_win/utils/dns/: dnsutils.py
os_win/utils/io/: ioutils.py  namedpipe.py
os_win/utils/metrics/: metricsutils.py
os_win/utils/network/: networkutils.py  networkutilsv2.py  nvgreutils.py
os_win/utils/storage/: diskutils.py  smbutils.py  vhdutils.py  vhdutilsv2.py  volumeutils.py  volumeutilsv2.py
os_win/utils/winapi/: constants.py  (+1 more)
os_windows/: __init__.py  _i18n.py  _utils.py  utilsfactory.py
os_windows/_hacking/: checks.py
os_windows/tests/: test_utils.py  test_utilsfactory.py
os_windows/utils/: basevolumeutils.py  hostutils.py  hostutilsv2.py  ioutils.py  jobutils.py  livemigrationutils.py  networkutils.py  networkutilsv2.py  pathutils.py  rdpconsoleutilsv2.py  vhdutils.py  vhdutilsv2.py  vmutils.py  vmutilsv2.py  volumeutils.py  volumeutilsv2.py
oslo_windows/: _i18n.py  _utils.py  exceptions.py  utilsfactory.py
oslo_windows/tests/: test_utils.py  test_utilsfactory.py
oslo_windows/utils/: basevolumeutils.py  constants.py  hostutils.py  hostutilsv2.py  ioutils.py  jobutils.py  livemigrationutils.py  networkutils.py  networkutilsv2.py  pathutils.py  rdpconsoleutilsv2.py  vhdutils.py  vhdutilsv2.py  vmutils.py  vmutilsv2.py  volumeutils.py  volumeutilsv2.py
releasenotes/notes/: detach_disk_by_tag-9d8d5b04f91fedd2.yaml  drop-py-2-7-3849027908cd8717.yaml  fc_scsi_id-c29d2e17c4d83453.yaml  job-objects-981d806d20826145.yaml  nic-hardware-offload-support-5912c91b2da93044.yaml  vhd-attach-detach-4ab53e23760442d4.yaml
releasenotes/source/: conf.py  index.rst
(+112 files in other folders)
