[metadata]
name = os-win
summary = Windows / Hyper-V library for OpenStack projects.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.cloudbase.it/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    os_win

[entry_points]
oslo.config.opts =
    os_win = os_win.conf:list_opts

[compile_catalog]
directory = os_win/locale
domain = os-win

[update_catalog]
domain = os-win
output_dir = os_win/locale
input_file = os_win/locale/os-win.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_win/locale/os-win.pot
